# SimpleModManager-Rust

./: Cargo.toml  LICENCE-APACHE  LICENSE  LICENSE-MIT  README.md  build.rs
.github/workflows/: build.yml
src/: main.rs
