[package]
name = "simplemodmanager-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = { version = "0.*.*", features = ["default-assets", "winit"] }
egui = { version = "0.*.*", features = ["winit", "serde"] }
rfd = "0.*.*"
serde = { version = "1.*.*", features = ["derive", "serialize", "deserialize"] }
serde_json = "1.*.*"
sevenz-rust = { version = "0.*.0", features = ["bin_progs"] }
sha2 = { version = "0.*.*", features = ["std"] }
zip = { version = "0.*.*", features = ["deflate", "bzip2", "lzma"] }

[profile.release]
debug = false
opt-level = "z"
lto = true
